syntax = "proto3";

package delivery.simulation;
option go_package = "github.com/lht102/delivery/api/delivery/simulation";

import "delivery/models.proto";
import "google/protobuf/timestamp.proto";

message SimulationRequest {
  repeated DeliveryRequest delivery_requests  = 1;
  repeated DriverRequest driver_requests = 2;
  google.protobuf.Timestamp created_at = 3;
}

message DriverRequest {
  string name = 1;
  delivery.VehicleCapacity vehicle_capacity = 2;
  delivery.LatLng loc = 3;
}


message DeliveryRequest {
  string name = 1;
  delivery.GoodsMetadata goods_metadata = 2;
  delivery.LatLng src_loc = 3;
  delivery.LatLng dst_loc = 4;
  delivery.TimeWindow src_time_window = 5;
  delivery.TimeWindow dst_time_window = 6;
  google.protobuf.Timestamp arrived_at = 7;
}
